2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Chaged to 6 default
	value for font_size. There was a problem and before
	the fix above || the id 7 was stored a 6 in db.
	              \/

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/setup/setup_visuals.php: Fixed an error
	creating array for font_size combo, the array id
	was created with 1 nomber less size 3 => id 2,
	size 1 => id 0. It causes wrong size stored in db.
	Now id equal to size.

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed the calculus
	for avg, max and min on statwin graphs and combined
	graphs. 

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/stat_win.php: Fixed a bug which don't
	fix the unchecked Avg. Only parameter which returns to be
	checked when form was submitted.

2012-10-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/setup/setup.php, include/functions_config.php,
	include/functions.php: now the "check_referer" can be disabled in
	the setup.
	
	MERGED FROM TRUNK
	
	* include/functions_reporting.php: uploaded lost fixed for the
	tactical view.
	
	MERGED FROM TRUNK
	
2012-09-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	index.php
	operation/menu.php
	godmode/agentes/modificar_agente.php
	godmode/menu.php: Fixed some pages to ACL Enterprise
	and the full screen pages loading menu structure when is not
	shown

2012-09-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	operation/agentes/estado_agente.php: Add a manually list of the
	pages (sec2) not accessibles from menu to link it to the
	section where appear (sec). Fix a bad section

2012-09-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/reporting.ajax.php: Deserialized field for metaconsole
	auth parameters.

2012-08-21 Dario Rodriguez <dario.rodriguez@artica.es>
