@@ -1,3 +1,8 @@
+2012-10-02 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_graph.php: Fixed an error
+	rounding last data on new graph statistics.
+
 2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/functions_config.php: Chaged to 6 default
